created CGU and Engagement de Confidentialite pages

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 Hello World
+<a href="./conditions-generales-d-utilisation.html">CGU</a>
+<a href="./engagement-de-confidentialite.html">engagement de confidentialité</a>
