--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-Hello World
+<h1>Hello World</h1>
 <a href="./conditions-generales-d-utilisation.html">CGU</a>
 <a href="./engagement-de-confidentialite.html">engagement de confidentialité</a>
