added 'contact' page, updated Terms&Conditions and fixed homepage viewheight to fill 100% for all mobile devices

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light">
-        <!-- <img class="PDS-logo" src="/static/Logo-place-des-services_Horizontal_Bleu.png" alt="Logo"> -->
-        <a class="navbar-brand" href="index.html"><img class="PDS-logo" src="static/Logo-place-des-services_Rond_Bleu1.png" alt="Logo">Place des Services</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="templates/conditions-generales-d-utilisation.html">> CGU </a>
-            <a class="nav-item nav-link active" href="templates/engagement-de-confidentialite.html">> Engagement de Confidentialité </a>
-            <a class="nav-item nav-link active" href="#">> Mentions Légales </a>
-          </div>
+      <!-- <img class="PDS-logo" src="/static/Logo-place-des-services_Horizontal_Bleu.png" alt="Logo"> -->
+      <a class="navbar-brand" href="index.html"><img class="PDS-logo" src="static/Logo-place-des-services_Rond_Bleu1.png" alt="Logo">Place des Services</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="templates/conditions-generales-d-utilisation.html">> CGU </a>
+          <a class="nav-item nav-link active" href="templates/engagement-de-confidentialite.html">> Engagement de Confidentialité </a>
+          <a class="nav-item nav-link active" href="#templates/nous-contacter.html">> Nous contacter </a>
         </div>
-      </nav>
-      <section class="container-fluid px-0">
-        <div class="banner d-flex align-items-start" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(static/vues/vue2.jpg);">
-          <div class="container-fluid">
-            <h1 class="center">Ouverture prochaine !</h1>
-            <p class="center mx-n1">Découvrez dès le 15 janvier 2020, votre&nbsp;<strong>Place&nbsp;des&nbsp;Services</strong>, une conciergerie au coeur du quartier Châtillon-Mermoz</p>
-          </div>
+      </div>
+    </nav>
+    <section class="container-fluid d-flex flex-column align-items-stretch px-0">
+      <div class="banner d-flex align-items-start flex-grow-1" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(static/vues/vue2.jpg);">
+        <div class="container-fluid">
+          <h1 class="center">Ouverture prochaine !</h1>
+          <p class="center mx-n1">Découvrez dès le 15 janvier 2020, votre&nbsp;<strong>Place&nbsp;des&nbsp;Services</strong>, une conciergerie au coeur du quartier Châtillon-Mermoz</p>
         </div>
-      </section>
+      </div>
+    </section>
 
 
     <!-- Optional JavaScript -->
