added 'contact' page, updated Terms&Conditions and fixed homepage viewheight to fill 100% for all mobile devices

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="templates/conditions-generales-d-utilisation.html">> CGU </a>
           <a class="nav-item nav-link active" href="templates/engagement-de-confidentialite.html">> Engagement de Confidentialité </a>
-          <a class="nav-item nav-link active" href="#templates/nous-contacter.html">> Nous contacter </a>
+          <a class="nav-item nav-link active" href="templates/nous-contacter.html">> Nous contacter </a>
         </div>
       </div>
     </nav>
