fixed navbar elements alignment using vh properties

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="templates/conditions-generales-d-utilisation.html">> CGU </a>
-          <a class="nav-item nav-link active" href="templates/engagement-de-confidentialite.html">> Engagement de Confidentialité </a>
-          <a class="nav-item nav-link active" href="templates/nous-contacter.html">> Nous contacter </a>
+          <a class="nav-item nav-link active" href="conditions-generales-d-utilisation.html">> CGU </a>
+          <a class="nav-item nav-link active" href="engagement-de-confidentialite.html">> Engagement de Confidentialité </a>
+          <a class="nav-item nav-link active" href="nous-contacter.html">> Nous contacter </a>
         </div>
       </div>
     </nav>
