--- a/nous-contacter.html
+++ b/nous-contacter.html
@@ -36,8 +36,8 @@
             contenu ou une fonctionnalité de l'application, vous pouvez le signaler à l'adresse suivante :<br>
             <strong>support.placedesservices@laposte.fr</strong>
           </p>
-          <p class="mt-n2">
-            Nous répondrons à votre réclamation dans un délai de 72 heures.
+          <p class="justify mt-n2">
+            Nous répondrons à votre réclamation dans les meilleurs délais.
           </p>
         </div>
     </div>
