fixed logo and links file paths

--- a/conditions-generales-d-utilisation.html
+++ b/conditions-generales-d-utilisation.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-light">
       <!-- <img class="PDS-logo" src="/static/Logo-place-des-services_Horizontal_Bleu.png" alt="Logo"> -->
-      <a class="navbar-brand" href="../index.html"><img class="PDS-logo" src="../static/Logo-place-des-services_Rond_Bleu1.png" alt="Logo">Place des Services</a>
+      <a class="navbar-brand" href="index.html"><img class="PDS-logo" src="static/Logo-place-des-services_Rond_Bleu1.png" alt="Logo">Place des Services</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
