--- a/engagement-de-confidentialite-ss.html
+++ b/engagement-de-confidentialite-ss.html
@@ -17,33 +17,29 @@
         <h2 class="title">Mention d’information sur la protection des données personnelles</h2>
         <div>
           <p class="justify">
-            Les données à caractère personnel recueillies font l’objet d’un traitement dont le 
-            responsable est La Poste, 9 rue du colonel Pierre Avia, 75015 Paris conformément à 
-            la réglementation relative à la protection des données à caractère personnel. Elles 
-            sont traitées pour la gestion du compte client, la fourniture et utilisation des 
-            services de la conciergerie Place des Services et sont nécessaires à l'exécution du 
-            contrat de prestation entre la Place des Services et l‘utilisateur de l’application 
-            mobile. Ces données seront conservées pendant toute la durée de l'abonnement et 
-            pendant 5 ans à compter de la date à laquelle l'abonnement expire.
+            Les données à caractère personnel recueillies font l’objet d’un traitement dont le responsable est La Poste, 9 rue du colonel Pierre Avia, 75015 Paris conformément à la réglementation relative à la protection des données à caractère personnel.
+            Elles sont traitées pour la gestion du compte client, la fourniture et utilisation des services de l’Agence Physique Place des Services et nécessaires à l'exécution du contrat de prestation entre la Place des Services et l'Abonné.
+            Ces données seront conservées pendant toute la durée de l'abonnement et pendant 5 ans à compter de la date à laquelle votre abonnement expirera.
           </p>
           <p class="justify">  
-            Les données à caractère personnel collectées sont obligatoires. A défaut, le contrat 
-            ne pourra être conclu entre la Place des Services et la personne concernée. Elles sont 
-            destinées aux services internes en charge de la gestion de la demande.
+            Les données à caractère personnel collectées sont obligatoires. A défaut, le contrat ne pourra être conclu entre la Place des Services et la personne concernée.
+            Elles sont destinées aux services internes en charge de la gestion de la demande.
+
           </p>
           <p class="justify">
-            Vous disposez d’un droit d’accès, de rectification, d'effacement, d’opposition et de limitation
-            du traitement. Vous pouvez faire une demande de portabilité pour les données que vous nous avez 
-            fournies et qui sont nécessaires au contrat ou au traitement desquelles vous avez consenti. 
+            L’Abonné dispose d’un droit d’accès, de rectification, d'effacement, d’opposition et de limitation du traitement. 
+            Il peut faire une demande de portabilité pour les données qu’il a fournies et qui sont nécessaires au contrat ou au traitement desquelles l’Abonné a consenti. 
             Dans le cadre de sa politique de protection des données personnelles La Poste a désigné un 
             délégué à la protection des données&nbsp;: <br>
             - Madame la Déléguée à la Protection des Données du Groupe La Poste CP C703 - 9 rue du Colonel Pierre Avia 75015 PARIS
           </p>
           <p class="justify">
-            En cas de difficulté en lien avec la gestion de vos données à caractère personnel, 
-            vous avez le droit d’introduire une réclamation auprès de la Commission Nationale
-            de l’Informatique et des Libertés (CNIL).
+            En cas de difficulté en lien avec la gestion de ses données à caractère personnel, l’Abonné a le droit d’introduire une réclamation auprès de la Commission Nationale de l’Informatique et des Libertés (CNIL).
           </p>
+
+          <h6 class="font-weight-bold pt-3">8.1 - Suppression du Compte Utilisateur</h6>
+          La Poste conserve le Compte utilisateur actif pendant la durée du contrat et pendant une durée de cinq (5) ans suivant la fin de celui-ci. Cette durée supplémentaire a pour objet de limiter les formalités de création de compte lorsque l’Utilisateur contractualise de nouveau avec La Poste dans l’année qui suit la fin de son contrat.
+          Si le Client souhaite supprimer le Compte utilisateur et le retirer de la base d’archivage avant échéance de la durée indiquée ci-dessus, il doit en faire la demande auprès de Madame la Déléguée à la Protection des Données du Groupe La Poste CP C703 - 9 rue du Colonel Pierre Avia 75015 PARIS.
         </div>  
     </div>
     <!-- Optional JavaScript -->
