--- a/conditions-generales-d-utilisation.html
+++ b/conditions-generales-d-utilisation.html
@@ -28,7 +28,7 @@
     </nav>
 
     <div class="container-fluid py-3">
-      <h1 class="mb-3">Conditions générales d'utilisation et de ventes</h1>
+      <h1 class="mb-3">Conditions générales d'utilisation et de ventes - version du 14/01/2020</h1>
       <!-- <h2 class="title">XXX</h2> -->
       <div id="accordion">
           <div class="card mb-1">
@@ -91,9 +91,6 @@
                   <li><span class="font-weight-bold">Place des Services : </span>
                     désignent l’ensemble des Services de La Poste et des Services Tiers fournis aux Utilisateurs accessibles par le biais de l’Application et l’Agence Physique, 
                     dans leur version actuelle et future ainsi que toute évolution dont ils pourraient faire l’objet.
-                  </li>
-                  <li><span class="font-weight-bold">Preuve de Dépôt : </span>
-                    désigne l’ensemble des Services décris ci-après ainsi que les Services Tiers fournis aux Utilisateurs accessibles par le biais de l’Application et l’Agence Physique, dans leur version actuelle et future ainsi que toute évolution dont ils pourraient faire l’objet.
                   </li>
                   <li><span class="font-weight-bold">Régisseur : </span>
                     désigne l’interlocuteur en charge de la gestion de l’Agence Physique. Cette personne est joignable dans l’Agence Physique aux horaires d’ouverture ainsi que via la messagerie mise à disposition sur l’Application.
@@ -209,8 +206,8 @@
                   Tout envoi déposé par l’Abonné, à l’Agence Physique ou dans une Boite Connectée, doit être affranchi au préalable et respecter les conditions de vente applicables à celui-ci. A défaut d’affranchissement de l’envoi, l’envoi ne sera pas pris en charge par La Poste. Dans le cas où l’envoi est déposé dans une Boite Connectée l’Abonné sera invité à venir le retirer à l’Agence Physique.
                   <br>
                   Les coûts afférents à l’affranchissement sont à la charge de l’Abonné.
-                  <br>
-                  <div class="strong">Heure Limite de Dépôt</div>
+                  <br><br>
+                  <div class="font-weight-bold">Heure Limite de Dépôt</div>
                   Les envois sont pris en charge par La Poste le jour de leur dépôt si les conditions suivantes sont remplies:
                   <br>
                   - envois déposés en Boîte Connectée : le dépôt doit être effectué avant l’heure limite figurant sur la Boîte Connectée :
@@ -225,10 +222,11 @@
                   </ul>
                   Lorsque le dépôt a lieu après l’heure limite ou un jour non ouvrable, l’envoi est pris en charge le jour d’ouverture de l’Agence Physique suivant le jour du dépôt.
 
-                  <div class="strong">Preuve de Dépôt</div>
+                  <br><br>
+                  <div class="font-weight-bold">Preuve de Dépôt</div>
                   <ul>
                     <li>Une fois l’envoi retiré par le Régisseur depuis la Boite Connectée, une Preuve de Dépôt est automatiquement envoyée par e-mail à l’Abonné (à l’adresse renseignée dans le parcours d’inscription) pour confirmer la prise en charge de l’envoi. Cette Preuve de Dépôt est à conserver par l’Abonné jusqu’à confirmation de l’arrivée de l’envoi à destination.</li>
-                    <li>Les Conditions Générales et Spécifiques de Vente des produits mentionnés en annexe s’appliquent. Lors d’un envoi via la Boite Connectée, l’Abonné recevra un email à l’adresse renseignée dans le parcours d’inscription pour confirmer la prise en charge de l’envoi. Ce document est à conserver jusqu’à confirmation de l’arrivée de l’envoi.</li>
+                    <li>Les Conditions Générales et Spécifiques de Vente des produits mentionnés en annexe s’appliquent. Lors d’un envoi via la Boite Connectée, l’Abonné recevra un email à l’adresse renseignée dans le parcours d’inscription pour confirmer la prise en charge de l’envoi. Ce document est à conserver, au moins jusqu’à confirmation de l’arrivée de l’envoi.</li>
                   </ul>
 
                   <h6 class="font-weight-bold pt-3">6.1.3 - « Mes Envois Reçus » - Dépôt d’envois pour expédition</h6>
@@ -236,9 +234,9 @@
                   <br>
                   La liste des envois autorisés est disponible en Annexe.
                   <br>
-                  Par les présentes, l’Abonné reconnait donner procuration à La Poste via Place des Services pour réceptionner les envois remis avec ou sans signature, qui respectent les dispositions applicables, adressés à l’Abonné et le cas échéant aux Co-Titulaires. Cette procuration est valable pendant toute la durée de l’abonnement. L’Abonné reconnait également attester sur l’honneur que les Co-Titulaires associés à son Compte Client lui ont explicitement donné préalablement leur accord pour que la procuration suivante soit applicable à leurs envois au même titre qu’à ceux de l’Abonné.
+                  Par les présentes, l’Abonné reconnait donner procuration à La Poste via Place des Services pour réceptionner les envois remis avec ou sans signature (hors lettres recommandées), qui respectent les dispositions applicables, adressés à l’Abonné et le cas échéant aux Co-Titulaires. Cette procuration est valable pendant toute la durée de l’abonnement. L’Abonné reconnait également attester sur l’honneur que les Co-Titulaires associés à son Compte Client lui ont explicitement donné préalablement leur accord pour que la procuration suivante soit applicable à leurs envois au même titre qu’à ceux de l’Abonné.
                   <br>
-                  En mentionnant l’adresse de l’Agence Physique sur ses envois, le Co-Titulaire donne mandat à l’Abonné : La Poste est ainsi autorisée dans ce cadre via Place des Services à réceptionner au nom et pour le compte des Co-Titulaires associés au Compte Utilisateur de l’Abonné et si nécessaire signer la preuve de livraison des envois. Ainsi, ceux-ci pourront bénéficier du service et La Poste pourra utiliser les informations transmises par l’Abonné au nom et pour le compte du Co-Titulaire.
+                  Le fait de mentionner l’adresse de l’Agence Physique sur ses envois, vaut mandat donné par le Co-Titulaire à l'Abonné : La Poste est ainsi autorisée dans ce cadre via Place des Services à réceptionner au nom et pour le compte des Co-Titulaires associés au Compte Utilisateur de l’Abonné et si nécessaire signer la preuve de livraison des envois. Ainsi, ceux-ci pourront bénéficier du service et La Poste pourra utiliser les informations transmises par l’Abonné au nom et pour le compte du Co-Titulaire, dans le cadre des présentes.
                   <br>
                   Pour bénéficier du service, l’Abonné doit mentionner comme uniques coordonnées postales de livraison son nom, prénom et « ID Client » (identifiant client unique disponible dans la rubrique « Mon Compte » de l’Application) ainsi que l’adresse postale de l’Agence Physique mentionnée dans la rubrique « Mon Compte ». L’adresse postale du domicile de l’Abonné sur l’envoi ne doit pas être précisée. Les règles d’adressage doivent être respectées.
 
@@ -254,7 +252,7 @@
                   <br>
                   Pour récupérer l’envoi auprès du Régisseur, l’Abonné se présente à l’Agence Physique pendant les horaires d’ouverture et dans le délai mentionné ci-après. Il doit justifier son « ID Client » et son identité. 
                   <br>
-                  Dans tous les cas, l’Abonné dispose d’un délai maximum de 45 jours calendaires à compter de la réception de l’envoi via Place des Services à l’Agence Physique, pour récupérer l’envoi depuis ce lieu. Une fois ce délai dépassé, Place des Services disposera de l’envoi.
+                  Dans tous les cas, l’Abonné dispose d’un délai maximum de 45 jours calendaires à compter de la réception de l’envoi via Place des Services à l’Agence Physique, pour récupérer l’envoi depuis ce lieu. Une fois ce délai dépassé, l'envoi sera réputé abandonné et Place des Services en disposera.
 
                 <h6 class="font-weight-bold pt-3">6.2 - Prêt d'objets</h6>
                 La liste des objets mis à disposition des Abonnés est accessible sur l’Application ou à l’Agence Physique. Plusieurs objets peuvent être loués : des outils de bricolage, des jeux de société, de l’électroménager et des objets électroniques. L’Abonné peut pré-réserver un objet auprès du Régisseur ou depuis la messagerie intégrée de l’Application. Le Régisseur l’informera de la disponibilité ou non de l’objet. L’Abonné peut louer entre un et trois objets simultanément disponibles auprès du Régisseur.
@@ -263,7 +261,7 @@
                 <br>
                 Lors de la remise de l’objet, un formulaire de remise de l’objet sera renseigné et signé par l’Abonné et La Poste. Une copie de la pièce d’identité de l’Abonné sera conservée et une empreinte bancaire ou un chèque sera demandé à titre de caution dont le montant peut varier selon l’objet. L’empreinte bancaire est prélevée via un TPE. L’Abonné est informé du montant de la caution lorsqu’il vient récupérer l’objet.
                 <br>
-                Le locataire est informé de la date de restitution de l’objet lorsqu’il le récupère. La caution sera immédiatement encaissée, en cas de restitution de l’objet au-delà de la date de restitution, de nécessité de réparation ou de remplacement, après restitution, de l’objet du fait de l’Abonné. Lors de la remise de l’objet ou de sa restitution, l’Abonné et le Régisseur réalisent ensemble une vérification visuelle. 
+                Le locataire est informé de la date de restitution de l’objet lorsqu’il le récupère. La caution sera immédiatement encaissée, en cas de restitution de l’objet au-delà de la date de restitution, de nécessité de réparation ou de remplacement de l’objet du fait de l’Abonné (cf ci-dessous). Lors de la remise de l’objet ou de sa restitution, l’Abonné et le Régisseur réalisent ensemble une vérification visuelle. 
                 <br>
                 L’objet doit être restitué pendant les horaires d’ouverture de l’Agence Physique où l’objet a été loué, en bon état et conforme à l’état initial lors de la mise à disposition. L’Abonné doit faire usage de l’objet conformément à sa destination et en suivant les indications mentionnées dans le mode d’emploi de l’objet, remis à l’Abonné en même temps que l’objet. L’Abonné est responsable de l’objet loué pendant la durée du contrat et tant que l’objet n’a pas été restitué à l’Agence Physique. La Poste ne saurait être tenue pour responsable des dommages ou accidents et d’une manière générale de toute insatisfaction qui pourrait survenir à l’occasion de l’utilisation ou de la jouissance des objets sous le contrôle de l’Abonné.
                 <br>
@@ -630,6 +628,8 @@
               </div>
             </div>
           </div>
+
+          <p class="font-weight-bold">Place des Services est proposée par La Poste - Société Anonyme au capital de 3 800 000 000 euros - 356 000 000 RCS PARIS dont le Siège social : 9 rue du Colonel Pierre Avia - 75015 PARIS.</p>
 
           <!--
           <div class="card mb-1">
