--- a/engagement-de-confidentialite.html
+++ b/engagement-de-confidentialite.html
@@ -52,7 +52,7 @@
             En cas de difficulté en lien avec la gestion de ses données à caractère personnel, l’Abonné a le droit d’introduire une réclamation auprès de la Commission Nationale de l’Informatique et des Libertés (CNIL).
           </p>
 
-          <h6 class="font-weight-bold pt-3">8.1 - Suppression du Compte Utilisateur</h6>
+          <h6 class="font-weight-bold pt-3">Suppression du Compte Utilisateur</h6>
           La Poste conserve le Compte utilisateur actif pendant la durée du contrat et pendant une durée de cinq (5) ans suivant la fin de celui-ci. Cette durée supplémentaire a pour objet de limiter les formalités de création de compte lorsque l’Utilisateur contractualise de nouveau avec La Poste dans l’année qui suit la fin de son contrat.
           Si le Client souhaite supprimer le Compte utilisateur et le retirer de la base d’archivage avant échéance de la durée indiquée ci-dessus, il doit en faire la demande auprès de Madame la Déléguée à la Protection des Données du Groupe La Poste CP C703 - 9 rue du Colonel Pierre Avia 75015 PARIS.
         </div>  
