--- a/conditions-generales-d-utilisation.html
+++ b/conditions-generales-d-utilisation.html
@@ -629,7 +629,7 @@
             </div>
           </div>
 
-          <p class="font-weight-bold">Place des Services est proposée par La Poste - Société Anonyme au capital de 3 800 000 000 euros - 356 000 000 RCS PARIS dont le Siège social : 9 rue du Colonel Pierre Avia - 75015 PARIS.</p>
+          <p class="font-weight-bold text-center">Place des Services est proposée par La Poste - Société Anonyme au capital de 3 800 000 000 euros - 356 000 000 RCS PARIS dont le Siège social : 9 rue du Colonel Pierre Avia - 75015 PARIS.</p>
 
           <!--
           <div class="card mb-1">
