Mention Donnees Perso maj dans les pages Mention

--- a/engagement-de-confidentialite-ss.html
+++ b/engagement-de-confidentialite-ss.html
@@ -18,17 +18,21 @@
         <div>
           <p class="justify">
             Les données à caractère personnel recueillies font l’objet d’un traitement dont le responsable est La Poste, 9 rue du colonel Pierre Avia, 75015 Paris conformément à la réglementation relative à la protection des données à caractère personnel.
-            Elles sont traitées pour la gestion du compte client, la fourniture et utilisation des services de l’Agence Physique Place des Services et nécessaires à l'exécution du contrat de prestation entre la Place des Services et l'Abonné.
-            Ces données seront conservées pendant toute la durée de l'abonnement et pendant 5 ans à compter de la date à laquelle votre abonnement expirera.
+            Elles sont traitées pour la gestion du compte client, la fourniture et utilisation des services à l’Agence Physique Place des Services et sur l'Application. Elles sont nécessaires à l'exécution du contrat entre la Place des Services et l'Abonné.
+            Ces données seront conservées pendant toute la durée de l'abonnement et et jusqu’à expiration des délais légaux.
           </p>
           <p class="justify">  
-            Les données à caractère personnel collectées sont obligatoires. A défaut, le contrat ne pourra être conclu entre la Place des Services et la personne concernée.
+            Les données à caractère personnel collectées sont obligatoires. A défaut, le contrat ne pourra être conclu et exécuté entre la Place des Services et la personne concernée.
             Elles sont destinées aux services internes en charge de la gestion de la demande.
-
           </p>
           <p class="justify">
             L’Abonné dispose d’un droit d’accès, de rectification, d'effacement, d’opposition et de limitation du traitement. 
             Il peut faire une demande de portabilité pour les données qu’il a fournies et qui sont nécessaires au contrat ou au traitement desquelles l’Abonné a consenti. 
+            L'Abonné peut aussi donner des instructions relatives à la conservation, à l'effacement et à la communication de ses données après son décès.
+            Ces droits peuvent être exercés, en précisant le nom, prénom de l'Abonné, adresse postale de l'Abonné et en joignant une copie recto-verso de sa pièce d'identité, en s'adressant à :<br>
+            support.placedesservices@laposte.fr 
+            <br>
+            Les données du Co-Titulaire peuvent être supprimées depuis l'Application, dans la rubrique Mon Compte.
             Dans le cadre de sa politique de protection des données personnelles La Poste a désigné un 
             délégué à la protection des données&nbsp;: <br>
             - Madame la Déléguée à la Protection des Données du Groupe La Poste CP C703 - 9 rue du Colonel Pierre Avia 75015 PARIS
@@ -36,10 +40,6 @@
           <p class="justify">
             En cas de difficulté en lien avec la gestion de ses données à caractère personnel, l’Abonné a le droit d’introduire une réclamation auprès de la Commission Nationale de l’Informatique et des Libertés (CNIL).
           </p>
-
-          <h6 class="font-weight-bold pt-3">Suppression du Compte Utilisateur</h6>
-          La Poste conserve le Compte utilisateur actif pendant la durée du contrat et pendant une durée de cinq (5) ans suivant la fin de celui-ci. Cette durée supplémentaire a pour objet de limiter les formalités de création de compte lorsque l’Utilisateur contractualise de nouveau avec La Poste dans l’année qui suit la fin de son contrat.
-          Si le Client souhaite supprimer le Compte utilisateur et le retirer de la base d’archivage avant échéance de la durée indiquée ci-dessus, il doit en faire la demande auprès de Madame la Déléguée à la Protection des Données du Groupe La Poste CP C703 - 9 rue du Colonel Pierre Avia 75015 PARIS.
         </div>  
     </div>
     <!-- Optional JavaScript -->
