--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <section class="container-fluid d-flex flex-column align-items-stretch px-0">
       <div class="banner d-flex align-items-start flex-grow-1" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(static/vues/vue2.jpg);">
         <div class="container-fluid">
-          <h1 class="center">Ouverture prochaine !</h1>
-          <p class="center mx-n1">Découvrez dès le 15 janvier 2020, votre&nbsp;<strong>Place&nbsp;des&nbsp;Services</strong>, une conciergerie au coeur du quartier Châtillon-Mermoz</p>
+          <h1 class="center">Votre nouvel espace de services et de vie de quartier !</h1>
+          <p class="center mx-n1">Découvrez votre&nbsp;<strong>Place&nbsp;des&nbsp;Services</strong> au coeur du quartier Châtillon-Mermoz & tous les services proposés tels que la gestion de colis, le prêt d'objets, l'animation de quartier et bien plus encore !</p>
         </div>
       </div>
     </section>
