--- a/politique-de-cookies.html
+++ b/politique-de-cookies.html
@@ -41,7 +41,7 @@
             <li>Suivre l’utilisation et le parcours des utilisateurs de manière anonyme sur l’application mobile</li>
             <li>Mesurer les audiences</li>
             <br>
-            <br>Des sites tiers peuvent collecter l’identifiant unique de votre mobile lorsque vous utilisez l’application Place des Services, dans le but de suivre vos habitudes de navigation et de mesurer les audiences. Lorsque vous installez l’application Place des Services vous consentez à l’utilisation de vos identifiants mobiles à des fins de mesures d’audience.
+            <br>Des sites tiers peuvent collecter l’identifiant unique de votre mobile lorsque vous utilisez l’application Place des Services, dans le but de suivre vos habitudes de navigation et de mesurer les audiences.
             <br>
             <br>Ces traceurs via les identifiants uniques sont utilisés pour obtenir des informations sur votre parcours en tant qu'utilisateur de l’application mobile, afin d’analyser le trafic sur l'application Place des Services et à des fins de mesures d’audience (par exemple, le nombre de pages visitées ou la durée de visite sur l’application). Les informations collectées sont anonymes et agrégées.
             <br>
@@ -51,17 +51,29 @@
             <br>
             <br>
             <h2 class="mb-3">Outils de traçage de l’Application</h2>
+            Des traceurs dit <b>fonctionnels</b> sont utilisés pour permettre d’améliorer et d’optimiser l’expérience utilisateur 
+            sur l’application. Ces traceurs ne peuvent être refusés car ils permettent le bon fonctionnement de 
+            l’application Place des Services.
+            <br>Des traceurs de <b>mesure</b> sont également utilisés pour analyser le parcours des utilisateurs et le trafic sur 
+            l’application mobile, à des fins de mesures d’audience. Cela permet de mieux identifier les besoins des 
+            utilisateurs sur leur utilisation de l’application. Ces traceurs ne fonctionnent que sous votre consentement 
+            nous permettant de collecter votre identifiant mobile unique (mais nous ne collectons pas votre identité).
+            <br>
+            <br>
             <li><b>Entreprise : Google</b></li>
             Nom de l’outil : Google Analytics
-            <br>Finalité(s) : MESURE
+            <br>Finalité(s) : Mesure, permet de connaitre l’audience et parcours sur l’application
+            <br>Durée de conservation : 2 mois 
             <br>
             <br>Nom de l’outil : Google Firebase
-            <br>Finalité(s) : SYSTÈME
+            <br>Finalité(s) : Fonctionnel, permet d’envoyer des notifications pushs aux utilisateurs
+            <br>Durée de conservation : 180 jours 
             <br>
             <br>
             <li><b>Entreprise : JBoss Red Hat</b></li>
              Nom de l’outil : Keycloak
-            <br>Finalité(s) : SYSTÈME
+            <br>Finalité(s) : Fonctionnel, permet de se connecter à son compte Place des Services
+            <br>Durée de conservation : 14 mois 
           </p>
           
           </p>
