--- a/engagement-de-confidentialite.html
+++ b/engagement-de-confidentialite.html
@@ -32,7 +32,7 @@
         <h2 class="title">Mention d’information sur la protection des données personnelles</h2>
         <div>
           <p class="justify">
-            TEST Les données à caractère personnel recueillies font l’objet d’un traitement dont le responsable est La Poste, 9 rue du colonel Pierre Avia, 75015 Paris conformément à la réglementation relative à la protection des données à caractère personnel.
+            Les données à caractère personnel recueillies font l’objet d’un traitement dont le responsable est La Poste, 9 rue du colonel Pierre Avia, 75015 Paris conformément à la réglementation relative à la protection des données à caractère personnel.
             Elles sont traitées pour la gestion du compte client, la fourniture et utilisation des services à l’Agence Physique Place des Services et sur l'Application. Elles sont nécessaires à l'exécution du contrat entre la Place des Services et l'Abonné.
             Ces données seront conservées pendant toute la durée de l'abonnement et et jusqu’à expiration des délais légaux.
           </p>
