--- a/engagement-de-confidentialite.html
+++ b/engagement-de-confidentialite.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="conditions-generales-d-utilisation.html">> CGUV </a>
-          <a class="nav-item nav-link active" href="engagement-de-confidentialite.html">> Engagement de Confidentialité </a>
+          <a class="nav-item nav-link active" href="engagement-de-confidentialite.html">> Politique de Confidentialité </a>
           <a class="nav-item nav-link active" href="nous-contacter.html">> Nous contacter </a>
         </div>
       </div>
