Modification titre home "politique de conf"

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="/site/V3/conditions-generales-d-utilisation.html">> CGUV </a>
-          <a class="nav-item nav-link active" href="engagement-de-confidentialite.html">> Engagement de Confidentialité </a>
+          <a class="nav-item nav-link active" href="engagement-de-confidentialite.html">> Politique de Confidentialité </a>
           <a class="nav-item nav-link active" href="politique-de-cookies.html">> Politique de cookies </a>
           <a class="nav-item nav-link active" href="nous-contacter.html">> Nous contacter </a>
         </div>
