--- a/engagement-de-confidentialite-ss.html
+++ b/engagement-de-confidentialite-ss.html
@@ -33,7 +33,7 @@
             support.placedesservices@laposte.fr 
             <br>
             Les données du Co-Titulaire peuvent être supprimées depuis l'Application, dans la rubrique Mon Compte.
-            Dans le cadre de sa <a href="https://placedesservices.github.io/site/engagement-de-confidentialite.html" politique de protection des données personnelles </a> La Poste a désigné un délégué à la protection des données&nbsp;: <br>
+            Dans le cadre de sa <a href="https://placedesservices.github.io/site/engagement-de-confidentialite.html" > politique de protection des données personnelles </a> La Poste a désigné un délégué à la protection des données&nbsp;: <br>
             - Madame la Déléguée à la Protection des Données du Groupe La Poste CP C703 - 9 rue du Colonel Pierre Avia 75015 PARIS
           </p>
           <p class="justify">
