MAJ mention inf :  nom DPO + suppression pièce ID

--- a/engagement-de-confidentialite-ss.html
+++ b/engagement-de-confidentialite-ss.html
@@ -29,13 +29,13 @@
             L’Abonné dispose d’un droit d’accès, de rectification, d'effacement, d’opposition et de limitation du traitement. 
             Il peut faire une demande de portabilité pour les données qu’il a fournies et qui sont nécessaires au contrat ou au traitement desquelles l’Abonné a consenti. 
             L'Abonné peut aussi donner des instructions relatives à la conservation, à l'effacement et à la communication de ses données après son décès.
-            Ces droits peuvent être exercés, en précisant le nom, prénom de l'Abonné, adresse postale de l'Abonné et en joignant une copie recto-verso de sa pièce d'identité, en s'adressant à :<br>
+            Ces droits peuvent être exercés, en précisant le nom, prénom de l'Abonné et l'adresse postale de l'Abonné, en s'adressant à :<br>
             support.placedesservices@laposte.fr 
             <br>
             Les données du Co-Titulaire peuvent être supprimées depuis l'Application, dans la rubrique Mon Compte.
             Dans le cadre de sa politique de protection des données personnelles La Poste a désigné un 
             délégué à la protection des données&nbsp;: <br>
-            - Madame la Déléguée à la Protection des Données du Groupe La Poste CP C703 - 9 rue du Colonel Pierre Avia 75015 PARIS
+            - Monsieur la Délégué à la Protection des Données du Groupe La Poste CP Y412 - 9 rue du Colonel Pierre Avia 75015 PARIS
           </p>
           <p class="justify">
             En cas de difficulté en lien avec la gestion de ses données à caractère personnel, l’Abonné a le droit d’introduire une réclamation auprès de la Commission Nationale de l’Informatique et des Libertés (CNIL).
