--- a/engagement-de-confidentialite-ss.html
+++ b/engagement-de-confidentialite-ss.html
@@ -35,7 +35,7 @@
             Les données du Co-Titulaire peuvent être supprimées depuis l'Application, dans la rubrique Mon Compte.
             Dans le cadre de sa politique de protection des données personnelles La Poste a désigné un 
             délégué à la protection des données&nbsp;: <br>
-            - Monsieur la Délégué à la Protection des Données du Groupe La Poste CP Y412 - 9 rue du Colonel Pierre Avia 75015 PARIS
+            - Monsieur le Délégué à la Protection des Données du Groupe La Poste CP Y412 - 9 rue du Colonel Pierre Avia 75015 PARIS
           </p>
           <p class="justify">
             En cas de difficulté en lien avec la gestion de ses données à caractère personnel, l’Abonné a le droit d’introduire une réclamation auprès de la Commission Nationale de l’Informatique et des Libertés (CNIL).
